# gnn

./: .gitignore  QM7-x.ipynb  QM9.ipynb  README.md  check_checkpoints.py  equivariance_eval.py  eval.py  final_test_eval.py  final_train_eval.py  geom_analysis.py  ideas.txt  load_molecules.ipynb  main.py  orbit_eval.py  pixi.toml  proejct_ckpt2_template-Copy1.ipynb  pyproject.toml  qm7x_dataset.py  scan_data.py  slurmscript.sh  train.py  train_augmentation.py  train_nonequivariant.py
Berkeley_code/: proejct_ckpt2_template.ipynb
blog_template/: index.html
checkpoints/: checkpoint_epoch_1.pt  checkpoint_epoch_10.pt  checkpoint_epoch_11.pt  checkpoint_epoch_12.pt  checkpoint_epoch_13.pt  checkpoint_epoch_14.pt  checkpoint_epoch_15.pt  checkpoint_epoch_16.pt  checkpoint_epoch_17.pt  checkpoint_epoch_2.pt  checkpoint_epoch_3.pt  checkpoint_epoch_4.pt  checkpoint_epoch_5.pt  checkpoint_epoch_6.pt  checkpoint_epoch_7.pt  checkpoint_epoch_8.pt  checkpoint_epoch_9.pt
config/: settings.py
configs/: settings.py
models/: chocolate.py  egnn.py  equivariant.py  gnn_nonequivariant.py  strawberry.py  train_egnn.py  vanilla.py
scripts/: POSIX_install_jupyter_kernel.sh  WINDOWS_install_jupyter_kernel.bat
utils/: learned_variance_utils.py  qm7x_data.py  rotation_utils.py
